plugins {
    id 'java'
    id "net.serenity-bdd.serenity-gradle-plugin" version "4.0.46"
}

defaultTasks 'clean', 'test', 'aggregate'
group = 'com.davoxPlus'
version = '1.0-SNAPSHOT'

compileJava.options.encoding = "UTF-8"
compileTestJava.options.encoding = "UTF-8"
sourceCompatibility = JavaVersion.VERSION_11
targetCompatibility = JavaVersion.VERSION_11

repositories {
    mavenCentral()
}

ext {
    serenityVersion = '3.6.0'
}

dependencies {
    implementation 'net.serenity-bdd:serenity-junit5:3.3.0'
    implementation 'net.serenity-bdd:serenity-cucumber:3.6.0'
    implementation 'net.serenity-bdd:serenity-core:3.6.0'

    implementation 'net.serenity-bdd:serenity-screenplay-rest:3.6.0'
    implementation 'org.slf4j:slf4j-api:1.7.5'
    implementation 'org.slf4j:slf4j-log4j12:1.7.5'

    implementation 'io.rest-assured:xml-path:5.3.1'
    implementation 'org.apache.commons:commons-text:1.10.0'
    compileOnly 'org.projectlombok:lombok:1.18.30'
    annotationProcessor 'org.projectlombok:lombok:1.18.30'

    implementation group: 'org.apache.poi', name: 'poi', version: '3.17'
    implementation group: 'org.apache.poi', name: 'poi-ooxml', version: '5.2.5'
    testImplementation("io.github.bonigarcia:webdrivermanager:5.6.1")

    testImplementation 'com.oracle.database.jdbc:ojdbc8:19.3.0.0'

    implementation files('libs/ojdbc8.jar')
    implementation files('libs/ojdbc8.jar', 'libs/orai18n.jar')

}

test {
    useJUnitPlatform()
    testLogging {
        events "passed", "skipped", "failed"
    }
}

serenity {
    requirementsBaseDir = "src/test/resources/features/"
    reports = ["single-page-html"]
}

gradle.startParameter.continueOnFailure = true
test.finalizedBy(aggregate)

tasks.withType(JavaCompile).configureEach {
    options.compilerArgs += [
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED'
    ]
}
